apps/dev/forgejo/app/envoypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: request-buffer
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: forgejo
      # namespace: dev
  requestBuffer:
    limit: 2Gi
